--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@types/supertest": "2.0.11",
     "@typescript-eslint/eslint-plugin": "4.28.4",
     "@typescript-eslint/parser": "4.28.4",
-    "class-transformer": "0.4.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "0.13.1",
     "codecov": "3.8.3",
     "eslint": "7.31.0",
@@ -77,7 +77,7 @@
   "peerDependencies": {
     "@nestjs/common": "^6.0.0 || ^7.0.0 || ^8.0.0",
     "@nestjs/core": "^6.0.0 || ^7.0.0 || ^8.0.0",
-    "class-transformer": "^0.3.0 || ^0.4.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.12.0 || ^0.13.0"
   }
 }
